--- a/package.json
+++ b/package.json
@@ -7,8 +7,11 @@
     "test": "jest"
   },
   "dependencies": {
+    "native-base": "^2.11.0",
     "react": "16.6.3",
-    "react-native": "0.58.4"
+    "react-native": "0.58.4",
+    "react-native-drawer": "^2.5.1",
+    "react-native-elements": "0.18.5"
   },
   "devDependencies": {
     "babel-core": "7.0.0-bridge.0",
